ai generated javadoc